创建房间请求接口，获取房间信息接口
Signed-off-by: linzhangfeng <linzhangfeng@linzhangfengdeMac-mini.local>

--- a/client/MuMuQiPai/jsbind/test.ini
+++ b/client/MuMuQiPai/jsbind/test.ini
@@ -1,7 +1,7 @@
 [lin]
 name = lin
 prefix = lin
-classes = PlatformHelper CommonModel
+classes = PlatformHelper CommonModel SocketClient UserModel SocketRequest SocketResponse
 
 android_headers = -I%(androidndkdir)s/platforms/android-14/arch-arm/usr/include -I%(androidndkdir)s/sources/cxx-stl/gnu-libstdc++/4.7/libs/armeabi-v7a/include -I%(androidndkdir)s/sources/cxx-stl/gnu-libstdc++/4.7/include -I%(androidndkdir)s/sources/cxx-stl/gnu-libstdc++/4.8/libs/armeabi-v7a/include -I%(androidndkdir)s/sources/cxx-stl/gnu-libstdc++/4.8/include
 android_flags = -D_SIZE_T_DEFINED_
@@ -18,7 +18,8 @@ headers = %(classroot)s/js.h
 
 target_namespace =
 remove_prefix =
-skip = 
+field = SocketResponse::[*]
+skip = SocketClient::[getRequestQueue getResponseQueue]
 base_objects =
 abstract_classes =
 classes_have_type_info = no
@@ -26,7 +27,7 @@ rename =
 rename_functions =
 rename_classes =
 # classes for which there will be no "parent" lookup
-classes_have_no_parents = CommonModel
+classes_have_no_parents = CommonModel UserModel SocketClient SocketResponse
 
 # base classes which will be skipped when their sub-classes found them.
 base_classes_to_skip =
