--- a/backstage/BackEnd/package.json
+++ b/backstage/BackEnd/package.json
@@ -14,6 +14,7 @@
     "babel-preset-stage-2": "^6.24.1"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mysql": "^2.17.1"
   }
 }
