--- a/backstage/FrontEnd/package.json
+++ b/backstage/FrontEnd/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "babel": "^6.23.0",
+    "babel-runtime": "^6.26.0",
     "element-ui": "^2.12.0",
     "moment": "^2.24.0",
     "vue": "^2.5.2",
