--- a/client/MuMuQiPai_3.16/common/CommonJsBindTest/common.ini
+++ b/client/MuMuQiPai_3.16/common/CommonJsBindTest/common.ini
@@ -6,7 +6,7 @@ classes = Network JPacket TcpClientTest
 android_headers = -I%(androidndkdir)s/platforms/android-14/arch-arm/usr/include -I%(androidndkdir)s/sources/cxx-stl/gnu-libstdc++/4.7/libs/armeabi-v7a/include -I%(androidndkdir)s/sources/cxx-stl/gnu-libstdc++/4.7/include -I%(androidndkdir)s/sources/cxx-stl/gnu-libstdc++/4.8/libs/armeabi-v7a/include -I%(androidndkdir)s/sources/cxx-stl/gnu-libstdc++/4.8/include
 android_flags = -D_SIZE_T_DEFINED_
 
-other_headers = -I%(cocosdir)s/jsoncpp/include/json/
+other_headers = -I%(cocosdir)s/jsoncpp/include/
 
 clang_headers = -I%(clangllvmdir)s/lib/clang/%(clang_version)s/include
 clang_flags = -nostdinc -x c++ -std=c++11 -U __SSE__
