网页上传文件到本地服务器测试成功
网页上传文件到本地服务器测试成功

--- a/backstage/BackEnd/package.json
+++ b/backstage/BackEnd/package.json
@@ -14,7 +14,9 @@
     "babel-preset-stage-2": "^6.24.1"
   },
   "dependencies": {
+    "compressing": "^1.5.1",
     "express": "^4.17.1",
+    "formidable": "^1.2.2",
     "mysql": "^2.17.1"
   }
 }
